# Project-Fajnanse

./: README.md
fajnanse-main/: CMakeLists.txt  imgui.ini
fajnanse-main/Inc/: Fajnanse.h  Konto.h  Osoba.h  Paragon.h  Wydatek.h  dodawanie.h  gui.h  monitorowanie.h  paneluzytkownika.h  planowanie.h  podsumowanie.h
fajnanse-main/src/: Fajnanse.cpp  Konto.cpp  Osoba.cpp  Paragon.cpp  Wydatek.cpp  dodawanie.cpp  gui.cpp  main.cpp  monitorowanie.cpp  paneluzytkownika.cpp  planowanie.cpp  podsumowanie.cpp
